--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,4 @@
 html{
-    background: linear-gradient(#08f, #fff);
     padding: 40px;
     width: 170px;
     height: 100%;
@@ -16,58 +15,10 @@ html{
     border: solid 5px #333;
   }
   
-  .trafficlight:before{
-    background: #222;
-    background-image: radial-gradient(#444, #000);
-    content: "";
-    width: 170px;
-    height: 150px;
-    margin: 0 auto;
-    position: absolute;
-    top: -20px;
-    margin-left: 0px;
-    border-radius: 50%;
-    z-index: -1;
-  }
-  
-  .trafficlight:after{
-    background: #222;
-    background-image: linear-gradient(-0deg, #777 10%, #ccc 30%, #000);
-    content: "";
-    width: 50px;
-    height: 500px;
-    margin-left: 60px;
-    position: absolute;
-    top: 150px;
-    z-index: -1;
-  }
-  
-  .protector{
-    background: transparent;
-    width: 180px;
-    height: 0;
-    position: absolute;
-    top: 20px;
-    left: -35px;
-    border-right: solid 30px transparent;
-    border-left: solid 30px transparent;
-    border-top: solid 90px #111;
-    border-radius: 10px;
-    z-index: -1;
-  }
-  
-  .protector:nth-child(2){
-    top: 140px;
-  }
-  
-  .protector:nth-child(3){
-    top: 260px;
-  }
-  
   .red{
     opacity: 10%;
     background: red;
-    background-image: radial-gradient(brown, transparent);
+    background-image: radial-gradient(red, transparent);
     background-size: 5px 5px; 
     width: 100px;
     height: 100px;
@@ -76,7 +27,6 @@ html{
     top: 20px;
     left: 35px;
     animation: 13s red infinite;
-    border: dotted 2px red;
     box-shadow: 
       0 0 20px #111 inset,
       0 0 10px red;
@@ -84,13 +34,12 @@ html{
   
   .yellow{
     opacity: 10%;
-    background: yellow;
+    background: orange;
     background-image: radial-gradient(orange, transparent);
     background-size: 5px 5px;
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    border: dotted 2px yellow;
     position: absolute;
     top: 145px;
     left: 35px;
@@ -102,13 +51,12 @@ html{
   
   .green{
     opacity: 10%;
-    background: green;
+    background: lime;
     background-image: radial-gradient(lime, transparent);
     background-size: 5px 5px;
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    border: dotted 2px lime;
     position: absolute;
     top: 270px;
     left: 35px;
@@ -171,7 +119,7 @@ html{
     /* height: 400px; */
     border-radius: 7px;
     /* position: relative; */
-    color: lime;
+    color: #05f82e;
     font-size: 50px;
     letter-spacing: 5px;
     border: solid 5px #333;
@@ -186,7 +134,7 @@ html{
   }
 
   span#counter-number.disable {
-    color: #2d2d2d;
+    color: #05f82e;
 }
 
 
@@ -277,92 +225,6 @@ html{
 	position: relative;
 }
 
-.volume-up-smartphone{
-	position: absolute;
-	height: 60px;
-	left: -8px;
-	width: 6px; 
-	top: 80px;
-	background-color: #000000;
-	border-radius: 10px 0 0 10px;
-}
-
-.volume-up-smartphone:hover{
-	left: -6px;
-	width: 4px; 
-}
-
-.volume-down-smartphone{
-	position: absolute;
-	height: 60px;
-	left: -8px;
-	width: 6px; 
-	top: 150px;
-	background-color: #000000;
-	border-radius: 10px 0 0 10px;
-}
-
-.volume-down-smartphone:hover{
-	left: -6px;
-	width: 4px; 
-}
-
-
-.power-smartphone{
-	position: absolute;
-	height: 60px;
-	right: -8px;
-	width: 6px; 
-	top: 115px;
-	background-color: #000000;
-	border-radius: 0 10px 10px 0;
-}
-
-.power-smartphone:hover{
-	right: -6px;
-	width: 4px; 
-}
-
-.header-smartphone{
-	display: flex;
-	position: absolute;
-	left: 0; 
-  	right: 0; 
-  	margin-left: auto; 
-  	margin-right: auto;
-	height: 10px;
-	border-radius: 40px;
-	width: 160px;
-	margin-top: -30px;
-}
-
-.speaker-smartphone{
-	display: inline-block;
-	background-color: #000000;
-	height: 10px;
-	width: 100px;
-	border-radius: 40px;
-	margin: auto;
-}
-
-.led-smartphone{
-	display: inline-block;
-	background-color: #fdd835;
-	height: 10px;
-	width: 10px;
-	margin: auto;
-	border-radius: 10px;
-}
-
-.camera-smartphone{
-	display: inline-block;
-	background-color: #000000;
-	height: 10px;
-	width: 10px;
-	margin: auto;
-	border-radius: 10px;
-}
-
 .screen-smartphone{
 	position: absolute;
 	left: 10px; 
@@ -374,27 +236,6 @@ html{
 	background-color: #FFF;
     border-radius: 5px;
     padding: 112px 18px;
-}
-
-
-.button-smartphone{
-	position: absolute;
-	left: 0; 
-  	right: 0; 
-  	margin-left: auto; 
-  	margin-right: auto;
-  	width: 50px;
-  	height: 50px;
-  	bottom: 10px;
-  	margin-left: auto; 
-  	margin-right: auto;
-	background-color: #222;
-	border-radius: 40px;
-	border: 2px solid #111;
-}
-
-.button-smartphone:active{
-	background-color: #1a1a1a;
 }
 
 .table-wrap {
